# Dennou-deepconv-arare6

./: COPYRIGHT  CREDITS  Config.mk.in  Config.mk.orig  INSTALL  Makefile  Rakefile  aclocal.m4  chkfort.sh  config.guess  config.sub  config.yml  configure  configure.in
css/: arare.css
doc/: Makefile  Makefile.rd2html  Makefile.rdoc  code_reference.rd  index.rd
doc/dai1bu/src/: Makefile  hensu.tex  huroku-A.tex  huroku-A1.tex  huroku-A2.tex  huroku-A3.tex  huroku-B.tex  huroku-C.tex  kiso.tex  reference.tex  teishiki.tex  varlist.tex
doc/dai1bu/src/images/: bibutsuri.eps  zsta.eps
doc/dai2bu/src/: Makefile  appendix-a.tex  appendix-b.tex  appendix-c.tex  appendix-d.tex  appendix-e.tex  appendix-f.tex  int.tex  koushi.tex  kyoukai.tex  long.tex  main.tex  mixrt.tex  operater.tex  reference.tex  risan.tex  sponge.tex  theta.tex  turb.tex  uwpi.tex
doc/dai2bu/src/ps/: axis.eps  grid.eps  koushi.eps  koushi_3d.eps  num.eps  timestep.eps  x_axis.eps  z_axis.eps
doc/tutorial/: Makefile.rd2html  calc_2d.rd  calc_mpi.rd  catseye.rd  compiler_note.rd  condense.rd  earth-plumetest.rd  exp-s93.rd  gokuraku.rd  grid_operation.rd  jupiter-plumetest.rd  mars-plumetest.rd  namelist.rd  namelist_init.rd  namelist_main.rd  rakuraku.rd  settings1.rd  settings2.rd  settings3.rd  settings4.rd  settings5.rd  visualization.rd
exp_setup_files/: Makefile
exp_setup_files/01_sound-wave/: sound-wave.sample  testrun.rb
exp_setup_files/02_advection/: advection.sample  testrun.rb
exp_setup_files/02_advection-QMix/: advection.sample  testrun.rb
exp_setup_files/03_gravity-wave/: gravity-wave.sample  testrun.rb
exp_setup_files/04_density-current/: density-current.sample  testrun.rb
exp_setup_files/05_warm-bubble/: testrun.rb  warm-bubble.sample  warm-bubble_160x1x80_Center4_Center2_0.0.conf  warm-bubble_160x1x80_Center4_Center2_20.0.conf
exp_setup_files/06_warm-bubble-kw1978/: testrun.rb  warm-bubble-kw1978.sample
exp_setup_files/07_venus-cloud-1D_ih1998/: Makefile  main.f90  venus_andoh_initial.dat.SIGEN
exp_setup_files/07_venus-cloud_ih1998/: test-imamura-1.f90  test-imamura-2.f90  test-imamura-4.f90
exp_setup_files/08_venus-cloud_ih1998/: arare.00.conf
exp_setup_files/09_simple-scheme/: README.md  advect.conf  advect.f90  diffuse.conf  diffuse.f90  diffuse_2d.f90  soundwave.conf  soundwave.f90
scripts/: arare_quickview.rb  arare_unite.rb
src/: Makefile
src/chemdat/: Makefile  chemdata.f90  chemdata.f90.orig  imamura1998.f90  test-chemdata.f90  test-imamura-2.f90  test-imamura-3.f90  test-imamura-4.f90  test-imamura-data_from_fukuhara.csv
src/dynamic/: Makefile  acousticmode_2d.f90  acousticmode_3d.f90  acousticmode_std.f90  advection_center4_2d.f90  advection_center4_3d.f90  advection_center4_mpdata_3d.f90  advection_center4_std.f90  dynamics_hevi_v1.f90  dynamics_hevi_v2.f90  dynamics_hevi_v3.f90  dynfunc.f90  dynfunc_3d.f90  dynimpfunc.f90.lapack  dynimpfunc.f90.matrix  dynimpfunc_3d.f90.lapack  dynimpfunc_3d.f90.matrix
src/env/: Makefile  initialdata_baker1998.f90  initialdata_basic.f90  initialdata_disturb.f90  initialdata_skamarock1994.f90  initialdata_smoothing.f90  initialdata_sounding.f90  initialdata_sounding2.f90  initialdata_takemi2007.f90  initialdata_toon2002.f90  initialdata_yamasaki1983.f90
src/io/: Makefile  arare4initfileio.f90  arare4restartfileio.f90  basicfileio.f90  historyfileio.f90  restartfileio.f90  restartfileio_ih1998.f90
src/main/: Makefile  arare.f90  arare_init-data.f90
src/moist/: Makefile  chemcalc.f90  cloudphys_ih1998.f90  cloudphys_k1969.f90  cloudphys_marscond.f90  eccm.f90  moistadjust.f90
src/radiation/: Makefile  radiation_baker1998.f90  radiation_heatbalance.f90  radiation_simple.f90  radiation_sounding.f90
src/setup/: Makefile  argset.f90  axesset.f90  basicset.f90  basicset_2d.f90  chemcalc.f90  clockset.f90  composition.f90  constants.f90  constants0.f90  dataset.f90  fileset.f90  gridset.f90  gridset_2d.f90  mpi_wrapper.F90  namelist_util.f90  timeset.f90
src/surface_flux/: Makefile  surfaceflux_baker1998.f90  surfaceflux_bulk.f90  surfaceflux_bulk_l1979.f90  surfaceflux_const.f90  surfaceflux_diff.f90
src/turbulence/: Makefile  turbulence_constkm.f90  turbulence_kw1978.f90  turbulence_kw1978_v2.f90
src/util/: Makefile  average.f90  average_2d.f90  boundary.f90  boundarympi.f90  cflcheck.f90  damping.f90  damping_2d.f90  dexnerdt.f90  differentiate_center2.f90  differentiate_center2_2d.f90  differentiate_center4.f90  differentiate_center4_2d.f90  energymonit.f90  fillnegative.f90  fillnegative_2d.f90  numdiffusion4th.f90  numdiffusion4th_2d.f90  setmargin.f90  setmargin2.f90  timefilter.f90  timefilter_3d.f90
